@@ -55,6 +55,11 @@
 #define CARTRIDGE_MAX_SIZE	(1024 * 1024)
 extern int CARTRIDGE_kb[CARTRIDGE_LAST_SUPPORTED + 1];
 
+/* Indicates whether the emulator should automatically reboot (coldstart)
+   after inserting/removing a cartridge. (Doesn't affect the piggyback
+   cartridge - in this case system will never autoreboot.) */
+extern int CARTRIDGE_autoreboot;
+
 typedef struct CARTRIDGE_image_t {
 	int type;
 	int state; /* Cartridge's state, such as selected bank or switch on/off. */
@@ -75,14 +80,24 @@ int CARTRIDGE_Initialise(int *argc, char *argv[]);
 #define CARTRIDGE_CANT_OPEN		-1	/* Can't open cartridge image file */
 #define CARTRIDGE_BAD_FORMAT		-2	/* Unknown cartridge format */
 #define CARTRIDGE_BAD_CHECKSUM	-3	/* Warning: bad CART checksum */
+/* Inserts the left cartrifge. */
 int CARTRIDGE_Insert(const char *filename);
+/* Inserts the left cartridge and reboots the system if needed. */
+int CARTRIDGE_InsertAutoReboot(const char *filename);
+/* Inserts the piggyback cartridge. */
 int CARTRIDGE_Insert_Second(const char *filename);
 /* When the cartridge type is CARTRIDGE_UNKNOWN after a call to
    CARTRIDGE_Insert(), this function should be called to set the
    cartridge's type manually to a value chosen by user. */
 void CARTRIDGE_SetType(CARTRIDGE_image_t *cart, int type);
+/* Sets type of the cartridge and reboots the system if needed. */
+void CARTRIDGE_SetTypeAutoReboot(CARTRIDGE_image_t *cart, int type);
 
+/* Removes the left cartridge. */
 void CARTRIDGE_Remove(void);
+/* Removes the left cartridge and reboots the system if needed. */
+void CARTRIDGE_RemoveAutoReboot(void);
+/* Removed the piggyback cartridge. */
 void CARTRIDGE_Remove_Second(void);
 
 /* Called on system coldstart. Resets the states of mounted cartridges. */
